# polka_cosmos_bridge_poc

./: README.md
cosmos/: Makefile  README.md  app.go  calltx.sh  go.mod  setup.sh
cosmos/cmd/nscli/: main.go
cosmos/cmd/nsd/: main.go
cosmos/x/nameservice/: alias.go  handler.go  module.go
cosmos/x/nameservice/client/cli/: query.go  tx.go
cosmos/x/nameservice/client/rest/: tx.go
cosmos/x/nameservice/internal/keeper/: keeper.go  querier.go
cosmos/x/nameservice/internal/types/: codec.go  msgs.go
cosmos/x/scb/internal/types/: key.go
polka/: Cargo.toml  README.md
polka/runtime/: Cargo.toml
polka/runtime/src/: lib.rs
polka/runtime/wasm/: Cargo.toml  build.sh
polka/runtime/wasm/src/: lib.rs
polka/src/: chain_spec.rs  main.rs  service.rs
service/: README.md  app.js  package-lock.json  package.json
