[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['cosmosbridgepoc-runtime/std']
[dependencies.cosmosbridgepoc-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'cosmosbridgepoc-runtime-wasm'
version = '1.0.0'
